[project]
name = "the-bear-down-bots"
version = "0.1.0"
description = "A project for the Bear Down Bots."
authors = [
    {name = "Alex R", email = "aromerlozano@arizona.edu"}
    ]
license = "MIT"
readme = "README.md"
keywords = ["robotics", "automation", "ECE-579"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"