[project]
name = "bear-down-bots"
version = "0.1.0"
description = "A project for the Bear Down Bots."
authors = [
    {name = "Alex R", email = "aromerlozano@arizona.edu"}
    ]
license = "MIT"
readme = "README.md"
keywords = ["robotics", "automation", "ECE-579"]

# runtime dependencies
dependencies = [
  "numpy>=1.24",
  # tkinter is part of the standard library; on Debian/Ubuntu:
  #   sudo apt install python3-tk
]

# optional dependencies
[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


# console‐script entry point; adjust target if your main() lives in a different module
[project.scripts]
run = "main:main"

# ─────────────────────────────────────────────────────────
# strip the leading src/ when packaging so that:
#   src/main.py → importable as module “main”
# ─────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.hatch.build.targets.sdist]
sources = ["src"]